# agentic_rag_benchmark

./: .env.example  .gitignore  AGENTS.md  NEXT_STEPS.md  README.md  ResearchPaper_to_read.md  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml  planner.yaml  planner_bm25_full.yaml  planner_dense.yaml  planner_dense_full.yaml  planner_hybrid.yaml  planner_hybrid_full.yaml  react.yaml  react_bm25_full.yaml  react_dense.yaml  react_dense_full.yaml  react_hybrid.yaml  react_hybrid_full.yaml  rlm.yaml  rlm_bm25_full.yaml  rlm_dense.yaml  rlm_dense_full.yaml  rlm_hybrid.yaml  rlm_hybrid_full.yaml  self_rag.yaml  self_rag_bm25_full.yaml  self_rag_dense.yaml  self_rag_dense_full.yaml  self_rag_hybrid.yaml  self_rag_hybrid_full.yaml  self_rag_test.yaml  vanilla.yaml  vanilla_bm25_full.yaml  vanilla_dense.yaml  vanilla_dense_full.yaml  vanilla_hybrid.yaml  vanilla_hybrid_full.yaml
docs/: TECHNICAL_SPEC.md
prompts/: planner_action.txt  planner_bridge_refine.txt  planner_solve.txt  planner_synthesize.txt  react.txt  rlm.txt  rlm_combine.txt  self_rag.txt  vanilla.txt
scripts/: analyze_results.py  run_experiment.py  test_pipeline.py
src/: __init__.py
tests/: __init__.py  test_architecture_factory.py  test_config.py  test_evaluator.py  test_hotpotqa.py  test_llm_client.py  test_metrics.py  test_mlflow_import.py  test_planner_config.py  test_planner_paper_alignment.py  test_planner_prompt.py  test_planner_rag.py  test_react_config.py  test_react_prompt.py  test_react_rag.py  test_recursive_lm.py  test_results.py  test_retriever_factory.py  test_run_experiment_config.py  test_self_rag.py  test_self_rag_config.py  test_self_rag_prompt.py  test_vanilla_rag.py
(+39 files in other folders)
